--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
     <title>INFO2180 Lab 1</title>
 </head>
 <body>
@@ -13,10 +14,14 @@
  </header>
  <main>
  <h2>Rahiem Lampart</h2>
- <p>[Paragraph about myself]</p>
+ <p>I am a second year student at UWI pursuing a major in Computer Science. 
+   My hobbies include watching anime, playing video games and 
+   reading and writing fiction novels. I am interested in Web Development
+   because it seems interesting and will likely be useful in 
+   my future.</p>
  </main>
  <footer>
- <p>Copyright &copy; 2020* Rahiem Lampart.</p>
+ <p>Copyright &copy; 2022 Rahiem Lampart.</p>
  </footer>
 </body>
 </html>
