Added cool image to webpage

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
      <p>This is a simple webpage for Lab 1 of INFO2180.</p>
  </header>
  <main>
+ <img src = "Infinite Tsukuyomi.jpg" alt = "Image of the Moon during 
+  the activation of Infinite Tsukuyomi" width = "500" height = "300">
  <h2>Rahiem Lampart</h2>
  <p>I am a second year student at UWI pursuing a major in Computer Science. 
    My hobbies include watching anime, playing video games and 
